# CarGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
src/: main.c
src/assets/bg/: bgFragment.frag  bgFragment.frag_w_  bgVertex copy.frag  bgVertex.frag  bgVertex.txt_w_
src/io/: file.c  file.h
